# TaxiProject

./: CMakeCache.txt  CMakeLists.txt  Makefile  MakefileClient  MakefileServer  ReadMe.md  TaxiProject.kdev4  cmake_install.cmake  findlpthread.cmake  m_client  m_server  main.c  main_client.c  packet.c  packet.h  socket.c  socket.h  t_client  t_server  tserver.c  tserver.h
